[project]
name = "un_submit"
authors = [
    { name = "SyvaSoft Business Solutions Pvt Ltd", email = "frappeteam@syvasoft.in"}
]
description = "UnSubmit is an app that allows users to move submitted forms back to draft status, enabling easy edits and resubmission"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
